refactor: CQRSを使用した方法に修正中
#99
